Layout shift fixed

--- a/assets/scss/admin-dashboard/_tutor-admin.scss
+++ b/assets/scss/admin-dashboard/_tutor-admin.scss
@@ -139,6 +139,7 @@
 	select.tutor-form-control,
 	.tutor-form-select {
 		padding-right: 36px !important;
+		margin: 0px;
 	}
 }
 
